--- a/WindowsAppVms.html
+++ b/WindowsAppVms.html
@@ -33,4 +33,9 @@
 <h2 id="ForcingWindowsAppVMintofulldesktopmode">Forcing Windows AppVM into full desktop mode</h2>
 <p>TODO</p>
 <h2 id="Usingtemplate-basedWindowsAppVMsQubesR2Beta3andlater">Using template-based Windows AppVMs (Qubes R2 Beta 3 and later)</h2>
-<p>TODO</p>
+<p>Qubes allows HVM VMs to share a common root filesystem from a select Template VM, just like it is done for Linux AppVMs. This mode is not limited to Windows AppVMs, and can be used for any HVM (e.g. FreeBSD running in a HVM). In order to create a HVM TemplateVM one can use the following command:</p>
+<pre class="wiki"><code>qvm-create --hvm-template win7-x64-template -l green</code></pre>
+<p>... and install Windows OS (or other OS) into this template the same way as you would install it into a normal HVM -- please see <a href="/wiki/wiki/HvmCreate">this page</a> instructions. However, it would make lots of sense to store the <code>C:\Users</code> directory on the 2nd disk which is automatically exposed by Qubes to all HVMs. This 2nd disk is backed by the <code>private.img</code> file in the AppVMs' and is not reset upon AppVMs reboot, so the user's directories and profiles would survive the AppVMs reboot, unlike the &quot;root&quot; filesystem which will be reverted to the &quot;golden image&quot; from the Template VM automatically.</p>
+<p>For this reason it also makes sense to disable update for all the Windows-based AppVMs -- of course this should be done in the Template VM, not in individual AppVMs, because the system-wide setting are stored in the root filesystem (which holds the system-wide registry hives).</p>
+<p>Once the template has been created and installed it is easy to create AppVMs based on:</p>
+<pre class="wiki"><code>qvm-create --hvm &lt;new windows appvm name&gt; --template &lt;name of template vm&gt; --label &lt;label color&gt;</code></pre>
