--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -29,6 +29,8 @@ qvm-start ubuntu --cdrom=work-web:/home/user/Downloads/ubuntu-12.10-desktop-i386
 <p>Alternatively, one can use <code>qvm-ls -n</code> command to obtain the same information.</p>
 <p>Now, one should configure the networking within the HVM according to those settings (IP/netmask/gateway). Only IPv4 networking is currently supported in Qubes.</p>
 <p><strong>Note:</strong> If one plans on installing Qubes Tools for Windows guests (see below) it is 'not' necessary to configure networking manually as described in this section, because the tools will take care of setting the networking automatically for such Windows domains.</p>
+<h2 id="UsingTemplate-basedHVMdomains">Using Template-based HVM domains</h2>
+<p>TODO (Coming in Qubes R2 beta 3).</p>
 <h2 id="CloningHVMdomains">Cloning HVM domains</h2>
 <p>Just like normal AppVMs, the HVM domains can also be cloned, either using a command-line <code>qvm-clone</code> command, or via manager's 'Clone VM' option in the right-click menu.</p>
 <p>The cloned VM will get identical root and private image, and essentially will be identical to the original VM, except that it will get a different MAC address for the networking interface:</p>
