--- a/HCL.html
+++ b/HCL.html
@@ -187,10 +187,14 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
-<p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
+<p>Lenovo Thinkpad x220<br /> (Sandy Bridge; HD Graphics; i5-2520M; BIOS: 1.39)</p>
 <p>OK</p>
 <p>OK</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/-b8b9fpo0UU/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a><br /> <a href="https://groups.google.com/d/msg/qubes-users/-b8b9fpo0UU/RFh6HiWqt5oJ">​Matt Tracy</a></p>
 <p>Lenovo Thinkpad x230<br /> (Ivy Bridge; HD Graphics; i5-3320M; BIOS:2.51)</p>
 <p>*</p>
 <p>OK</p>
