--- a/HCL.html
+++ b/HCL.html
@@ -150,6 +150,18 @@
 <p>OK</p>
 <p>needs kernel downgrade to 3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>HP EliteBook 8540p<br /> (Arrandale; NVIDIA GT216; i5-2540M; BIOS:F.0C)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/o_FTsPW6GD8/bjAD-CSpRKsJ">Olivier Médoc</a></p>
+<p>HP EliteBook 8560p<br /> (Sandy Bridge; ATI Caicos; i5-2540M; BIOS: F.08)</p>
+<p>*</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/o_FTsPW6GD8/bjAD-CSpRKsJ">Olivier Médoc</a></p>
 <p>HP Pavilion Sleekbook 14-B030TU<br /> (Ivy Bridge; Intel HD Graphics; i5-3317; BIOS F.06)</p>
 <p>OK</p>
 <p>OK</p>
