--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -6,6 +6,14 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
+<li>Qubes-R2-Beta3-x86_64-DVD.iso (coming soon!)</li>
+<li>Digital Signature (coming soon!)</li>
+</ul>
+<ul>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2B3">Installation Guide for R2 Beta 3</a></strong></li>
+<li><a href="/wiki/wiki/UpgradeToR2B3">Upgrading to Qubes R2 Beta 3</a></li>
+</ul>
+<ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta2-x86_64-DVD.iso/download">​Qubes-R2-Beta2-x86_64-DVD.iso</a> (via sourceforge.net)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta2-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
