--- a/UpgradeToR2B3.html
+++ b/UpgradeToR2B3.html
@@ -1,7 +1,7 @@
 <h1 id="UpgradingQubesR2beta2toR2beta3">Upgrading Qubes R2 beta2 to R2 beta3</h1>
 <p>Existing users of Qubes R2 beta2 can upgrade their systems to the latest R2 beta release by following the procedure below. As usual, it is advisable to backup the system before proceeding with the upgrade. While it is possible to upgrade the system <strong>it is strongly recommended to reinstall it</strong>. You will preserve all your data and settings thanks to <a href="/wiki/wiki/BackupRestore">backup and restore tools</a>.</p>
 <h2 id="UpgradeallTemplateandStandaloneVMs">Upgrade all Template and Standalone VM(s)</h2>
-<p>By default, in Qubes R2, there is only one Template VM, however users are free to create more Template VMs for special purposes, as well as Standalone VMs. More information on using multiple Template VMs, as well as Standalone VMs, can be found [SoftwareUpdateVM here]. The steps described in this section should be repeated in <em>all</em> user's Template and Standalone VMs.</p>
+<p>By default, in Qubes R2, there is only one Template VM, however users are free to create more Template VMs for special purposes, as well as Standalone VMs. More information on using multiple Template VMs, as well as Standalone VMs, can be found <a href="/wiki/wiki/SoftwareUpdateVM">here</a>. The steps described in this section should be repeated in <em>all</em> user's Template and Standalone VMs.</p>
 <p>It is critical to complete this step <strong>before</strong> proceeding to dom0 upgrade. Otherwise you will most likely ends with unusable system.</p>
 <ol>
 <li>Open terminal in the template VM (or standalone VM). E.g. use the Qubes Manager's right-click menu and choose Run Command in VM and type <code>gnome-terminal</code> there.</li>
