--- a/InstallationGuideR2B3.html
+++ b/InstallationGuideR2B3.html
@@ -25,6 +25,7 @@
 <p>Before proceeding with the installation, you are encouraged to first read all the information on this page, especially the <em>Known Issues</em> paragraph.</p>
 <p>Then, when finally ready, boot your system from the installer DVD and follow the instructions on screen. The installer is very simple and asks very few questions -- it's actually easier to install Qubes right now than most other Linux distributions!</p>
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
+<p><a href="/wiki/attachment/wiki/InstallationGuideR2B3/r2b3-installer-welcome.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2b3-installer-welcome.png&quot; attached to InstallationGuideR2B3" alt="No image &quot;r2b3-installer-welcome.png&quot; attached to InstallationGuideR2B3" /></a></p>
 <h2 id="UpgradingfromQubesR1orR2Beta2">Upgrading from Qubes R1 or R2 Beta 2</h2>
 <p>TODO</p>
 <h2 id="InstallingUpdates">Installing Updates</h2>
