--- a/InstallationGuideR2B3.html
+++ b/InstallationGuideR2B3.html
@@ -27,7 +27,9 @@
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
 <p><a href="/wiki/attachment/wiki/InstallationGuideR2B3/r2b3-installer-welcome.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2b3-installer-welcome.png&quot; attached to InstallationGuideR2B3" alt="No image &quot;r2b3-installer-welcome.png&quot; attached to InstallationGuideR2B3" /></a></p>
 <h2 id="UpgradingfromQubesR1orR2Beta2">Upgrading from Qubes R1 or R2 Beta 2</h2>
-<p>TODO</p>
+<p>The easiest and safest way to upgrade to Qubes R2B3 is to install it from scratch and use <a href="/wiki/wiki/BackupRestore">qubes backup and restore tools</a> for migrating of all of the user VMs.</p>
+<p>Users can also try a manual upgrade procedure that has been described <a href="/wiki/wiki/UpgradeToR2B3">here</a>.</p>
+<p>Note: if the user has custom Template VMs (i.e. other than the default template, e.g. created from it by cloning), or Standalone VMs, then the user should perform manual upgrade from R2B2 to R2B3, as described under the link given above.</p>
 <h2 id="InstallingUpdates">Installing Updates</h2>
 <p>Installing updates is very easy and can be done using the &quot;Update&quot; button in the Qubes Manager. Alternatively it can also be done from command prompt -- see the following for more details:</p>
 <ul>
