--- a/QubesFirewall.html
+++ b/QubesFirewall.html
@@ -48,7 +48,7 @@
 <p>Still in NetVM terminal, code the appropriate natting firewall rule to intercept traffic on the inbound interface for the service and nat the destination IP address to the one of the firewallVM for the traffic to be routed there:</p>
 <pre class="wiki"><code>iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 443 -d 192.168.0.10 -j DNAT --to-destination 10.137.1.x</code></pre>
 <p>Code the appropriate new filtering firewall rule to allow new connections for the service:</p>
-<pre class="wiki"><code>iptables -I FORWARD 2 -i eth0 -d 10.137.1.x -p tcp --dport 443 -m state --state NEW -j ACCEPT</code></pre>
+<pre class="wiki"><code>iptables -I FORWARD 2 -i eth0 -d 10.137.1.x -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT</code></pre>
 <p>Note: If you want to expose the service on multiple interfaces, repeat the steps described in part 1 for each interface.</p>
 <p>That's it for the netVM. You can verify you are cutting through the netVM by looking at the counters for your firewall rules:</p>
 <p><code> iptables -t nat -L -v -n </code></p>
@@ -61,7 +61,7 @@
 
 /sbin/iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 443 -d 192.168.0.10 -j DNAT --to-destination 10.137.1.x
 
-/sbin/iptables -I FORWARD 2 -s 192.168.0.0/24 -d 10.137.1.x -p tcp --dport 443 -m state --state NEW -j ACCEPT</code></pre>
+/sbin/iptables -I FORWARD 2 -s 192.168.0.0/24 -d 10.137.1.x -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT</code></pre>
 <p>Make this file executable:</p>
 <pre class="wiki"><code>sudo chmod +x /rw/config/rc.local </code></pre>
 <p><strong>2. Allow packets to be routed from the firewallVM to the appVM</strong></p>
@@ -70,7 +70,7 @@
 <p>Still in FirewallVM terminal, code the appropriate natting firewall rule to intercept traffic on the inbound interface for the service and nat the destination IP address to the one of the AppVM for the traffic to be routed there:</p>
 <pre class="wiki"><code>iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 443 -d 10.137.1.x -j DNAT --to-destination 10.137.2.y</code></pre>
 <p>Code the appropriate new filtering firewall rule to allow new connections for the service:</p>
-<pre class="wiki"><code>iptables -I FORWARD 2 -i eth0 -s 192.168.0.0/24 -d 10.137.2.y -p tcp --dport 443 -m state --state NEW -j ACCEPT</code></pre>
+<pre class="wiki"><code>iptables -I FORWARD 2 -i eth0 -s 192.168.0.0/24 -d 10.137.2.y -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT</code></pre>
 <blockquote>
 <p>Note: If you do not wish to limit the IP addresses connecting to the service, remove the <code> -s 192.168.0.1/24 </code></p>
 </blockquote>
@@ -81,12 +81,12 @@
 
 /sbin/iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 443 -d 10.137.1.x -j DNAT --to-destination 10.137.2.y
 
-/sbin/iptables -I FORWARD 4 -i eth0 -s 192.168.0.0/24 -d 10.137.2.y -p tcp --dport 443 -m state --state NEW -j ACCEPT</code></pre>
+/sbin/iptables -I FORWARD 4 -i eth0 -s 192.168.0.0/24 -d 10.137.2.y -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT</code></pre>
 <p>And again make this file executable:</p>
 <pre class="wiki"><code>sudo chmod +x /rw/config/qubes_firewall_user_script</code></pre>
 <p><strong>3. Allow packets into the AppVM to reach the service</strong></p>
 <p>Here no routing is required, only filtering. Proceed in the same way as above but store the filtering rule in the <code>/rw/config/rc.local</code> script.</p>
 <pre class="wiki"><code>#!/bin/sh
 
-/sbin/iptables -I INPUT 5 -p tcp --dport 443 -m state --state NEW -j ACCEPT</code></pre>
+/sbin/iptables -I INPUT 5 -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT</code></pre>
 <p>This time testing should allow connectivity to the service.</p>
