--- a/SoftwareUpdateDom0.html
+++ b/SoftwareUpdateDom0.html
@@ -7,7 +7,7 @@
 <li>Correcting non-security related bugs (e.g. new buttons for qubes manager)</li>
 <li>Adding new features (e.g. GUI backup tool)</li>
 </ul>
-<h2 id="HowtodothatinR1Beta2andlater">How to do that? (in R1 Beta 2 and later)</h2>
+<h2 id="Howtodothat">How to do that?</h2>
 <p>Start a console in Dom0 and then run one of the following command:</p>
 <p>1) To check and install updates for Dom0 software:</p>
 <pre class="wiki"><code>$ sudo qubes-dom0-update</code></pre>
@@ -22,14 +22,3 @@
 <li><p>Downgrade packge:</p>
 <pre class="wiki"><code>sudo yum downgrade package-version</code></pre></li>
 </ol>
-<h2 id="HowtodothatinR1Beta1">How to do that? (in R1 Beta 1)</h2>
-<p>Currently Dom0 update procedure requires command line -- in the future we will make it available from the GUI manager.</p>
-<p>First, start the console in Dom0, and switch to root. Then attach Dom0 to the netvm, and run yum update:</p>
-<pre class="wiki"><code>$ sudo bash
-# qvm-dom0-network-via-netvm up
-# yum update</code></pre>
-<p>Note that by default there is only one repository enabled: <code></code><code>qubes-dom0-current</code><code></code>.</p>
-<p>We strongly recommend to <strong>reboot your system</strong> after Dom0 update.</p>
-<p>Alternatively, if you don't want to reboot for some reason, you should not forget about detaching Dom0 from the network:</p>
-<pre class="wiki"><code># qvm-dom0-network-via-netvm down</code></pre>
-<p>In the future we will modify this update procedure so that it won't require attaching networking to Dom0. Most likely we will use a moderately-trusted system service VM to perform the download of the update rpm via network, and later copy this file to Dom0 using our secure file copy mechanism. Dom0 will then verify the signature on the RPM, and assuming it was ok, will install the rpm.</p>
