--- a/HCL.html
+++ b/HCL.html
@@ -3,9 +3,7 @@
 <p><strong>Legend</strong></p>
 <p><strong>Background colors</strong></p>
 <p>Green</p>
-<p>The reporter has clearly stated that <strong>all</strong> components and features are working correctly.</p>
-<p>White</p>
-<p>The reporter has sent an HCL Info output which indicates everything is OK without any comments.</p>
+<p>The reporter has sent an HCL Info output which indicates everything is OK.</p>
 <p>Yellow</p>
 <p>Some non-required feature is missing (e.g., VT-d), or manual tweaking is required in order to get some components to work.</p>
 <p>Red</p>
@@ -24,7 +22,7 @@
 <p></p>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
-<p><strong>Qubes R2 Beta2</strong></p>
+<p><strong>Qubes R2 Beta3</strong></p>
 <p><strong>Reported by</strong></p>
 <p>Standard feautures</p>
 <p>VT-d</p>
@@ -44,7 +42,6 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>Requires kernel 3.2.30 to support S3 sleep (the default kernel S3 sleep causes system reboot)</p>
 <p>Qubes core developers</p>
 <p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
 <p>OK</p>
@@ -58,19 +55,11 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
 <p>Qubes core developers</p>
 <p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
 <p>OK</p>
 <p>OK</p>
 <p>needs kernel 3.4.17+</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>Suspend doesn't work on 3.7.6 kernel, but work on 3.7.4</p>
 <p>Qubes core developers</p>
 <p><strong>User Reported Laptops</strong></p>
 <p>Apple MacBookPro<br /> (i7 M620)</p>
@@ -108,17 +97,6 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​read more</a></p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​Erik Edin</a></p>
-<p>Dell Latitude E6320<br /> (Intel HD graphics; Sandy Bridge; i5-2540M; BIOS: A06)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/FyA7_Kzw1WA/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/F-jVh62ANak/s57rqUWTY7kJ">Alex​</a></p>
-<p>Dell Latitude E6430<br /> (Intel HD graphics; Ivy Bridge; i5-3340M, BIOS: A11)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
 <p>OK</p>
@@ -134,89 +112,25 @@
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></p>
 <p>Dell XPS 13<br /> (i5; intel HD; sandy bridge; BIOS A03)</p>
 <p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/jamRkZJDC0g/KTniY0Y3dioJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
-<p>Dell XPS 13 (L322X)<br /> (i7-3537U; intel HD; Ivy Bridge; BIOS A09)</p>
-<p>*</p>
-<p>OK</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/21kqNBzJLPw/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/21kqNBzJLPw/e74SMRweTMsJ">​Brian J Smith-Sweeney</a></p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>needs kernel downgrade to 3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
-<p>HP EliteBook 8540p<br /> (Arrandale; NVIDIA GT216; i5-2540M; BIOS:F.0C)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/o_FTsPW6GD8/bjAD-CSpRKsJ">Olivier Médoc</a></p>
-<p>HP EliteBook 8560p<br /> (Sandy Bridge; ATI Caicos; i5-2540M; BIOS: F.08)</p>
-<p>*</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/o_FTsPW6GD8/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/o_FTsPW6GD8/bjAD-CSpRKsJ">Olivier Médoc</a></p>
-<p>HP Pavilion Sleekbook 14-B030TU<br /> (Ivy Bridge; Intel HD Graphics; i5-3317; BIOS F.06)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
-<p>Lenovo Thinkpad Edge E130<br /> (Ivy Bridge; HD Graphics i3-3217U; BIOS: 2.05)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/kGnZKZ9ILKA/2vpzltNW3K4J">Danny Cautaert</a></p>
-<p>Lenovo Thinkpad T430<br /> (Ivy Bridge; HD Graphics; i5-3360M; BIOS: 2.51)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/LSVluAZ9Udo/Fl3jmt4tWssJ">Alex Dubois</a></p>
-<p>Lenovo Thinkpad T430s<br /> (i5-3320M)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/V4PQYEBuoSg/discussion">read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/V4PQYEBuoSg/udLCHyR6RUUJ">cprise</a></p>
-<p>Lenovo Thinkpad T430U<br /> (Ivy Bridge; HD Graphics +GT 620M; i7-3517M; BIOS: 2.08)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/Z9M_k3i6dxU/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/Z9M_k3i6dxU/09CqBppyMnsJ">tigerbeard</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​read more</a></p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
-<p>Lenovo Thinkpad X1 Carbon (LENOVO 3444CTO)<br /> (i5-3427U)</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
 <p>Lenovo Thinkpad x220<br /> (Sandy Bridge; HD Graphics; i5-2520M; BIOS: 1.39)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/-b8b9fpo0UU/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a><br /> <a href="https://groups.google.com/d/msg/qubes-users/-b8b9fpo0UU/RFh6HiWqt5oJ">​Matt Tracy</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a><br /></p>
 <p>Lenovo Thinkpad x230<br /> (Ivy Bridge; HD Graphics; i5-3320M; BIOS:2.51)</p>
 <p>*</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​read more</a></p>
-<p>*</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/hf0vkL3TE7k/discussion">​read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a><br /> <a href="https://groups.google.com/d/msg/qubes-users/hf0vkL3TE7k/VOtrW3wEbtMJ">​mgflax</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a><br /></p>
 <p>Toshiba Tecra S11</p>
 <p>OK</p>
 <p>OK</p>
@@ -233,53 +147,15 @@
 <p>Samsung Series 7 Chronos NP700Z5C<br /> (nVidia Optimus; i7-3635QM; BIOS P04ABJ)</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​read more</a></p>
-<p>OK</p>
-<p>OK</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/Wu1mn9f1qgM/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​Outback Dingo</a></p>
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a></p>
-<p>Zareason Ultra Lap 420<br /> (Ivy Bridge; HD Graphics; i5-3317U)</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/uKI-VBtKWxg/uKjsdGNSpSQJ">​Ant</a></p>
 <p><strong>User Reported Desktops and Workstations</strong></p>
-<p>ASRock Z77 Pro4<br /> (Ivy Bridge; Xeon E3-1200 Graphics; i7-3770; BIOS: P1.40)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/lycnE-LcJBo/discussion">read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/lycnE-LcJBo/0u10xl7AMrIJ">gorka</a></p>
-<p>Dell Inspiron 660<br /> (Xeon E3-1200 Graphics; i5-3330; BIOS: A09)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/Nq7T0l4A2b0/discussion">read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/Nq7T0l4A2b0/IP_pwZMn9LYJ">KR</a></p>
-<p>Dell Precision T3400 Workstation<br /> (NVIDIA Quadro NVS 290; Intel Q6600; BIOS: A09)</p>
-<p>OK</p>
-<p>OK</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/D16dM3rg8Iw/zOEZmjTJkRIJ">Andrew Sorensen</a></p>
-<p>GA-fxa990-ud3 (rev 3.0)<br /> (AMD FX-8350; GTX 470)</p>
-<p>OK</p>
-<p>OK</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/oox94EsIduQ/7w4xUoK5pxwJ">m astroj</a></p>
-<p>MSI Big Bang<br /> (i7-950; Radeon HD 6770)</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
 <p>Supermicro X10SAE<br /> (Haswell; Radeon HD 5700; Xeon E3-1245; BIOS: 1.0)</p>
 <p>X</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
-<p>OK</p>
-<p>OK</p>
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">Qubes Fan</a></p>
