--- a/HCL.html
+++ b/HCL.html
@@ -2,6 +2,8 @@
 <p><strong>Note:</strong> The HCL is a compilation of reports generated and submitted by users. Except in the case of developer-reported entries, the Qubes team has not independently verified the accuracy of these reports. If using the list to make a purchasing decision, we recommend that you first test the hardware yourself, if possible.</p>
 <p><strong>Legend</strong></p>
 <p><strong>Background colors</strong></p>
+<p>White</p>
+<p>We have not received any report jet</p>
 <p>Green</p>
 <p>The reporter has sent an HCL Info output which indicates everything is OK.</p>
 <p>Yellow</p>
@@ -52,6 +54,9 @@
 <p>X</p>
 <p>Qubes core developers</p>
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
 <p>OK</p>
 <p>OK</p>
 <p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
