--- a/UserDoc.html
+++ b/UserDoc.html
@@ -30,6 +30,7 @@
 <li><a href="/wiki/wiki/LinuxHVMTips">Tips for using Linux in HVM</a></li>
 <li><a href="/wiki/wiki/FullScreenMode">Enabling Fullscreen mode for AppVMs</a></li>
 <li><a href="/wiki/wiki/UserDoc/OpenPGP">Using OpenPGP in Qubes</a></li>
+<li>Installing <a href="/wiki/wiki/ZFS">ZFS</a> in Qubes</li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
