--- a/HCL.html
+++ b/HCL.html
@@ -1,4 +1,5 @@
 <h1 id="HardwareCompatibilityListHCLforAllQubesOSReleases">Hardware Compatibility List (HCL) for All Qubes OS Releases</h1>
+<p>This list contains information about the latest stable release (<strong>R1</strong>) and the latest development release (<strong>R2B3</strong>). You can find the <a href="http://wiki.qubes-os.org/trac/wiki/HCL-R2B2">old HCL here</a>.</p>
 <p><strong>Note:</strong> The HCL is a compilation of reports generated and submitted by users. Except in the case of developer-reported entries, the Qubes team has not independently verified the accuracy of these reports. If using the list to make a purchasing decision, we recommend that you first test the hardware yourself, if possible.</p>
 <p><strong>Legend</strong></p>
 <p><strong>Background colors</strong></p>
