--- a/HCL.html
+++ b/HCL.html
@@ -30,7 +30,7 @@
 <p>Standard feautures</p>
 <p>VT-d</p>
 <p>Remarks</p>
-<p>Standard features</p>
+<p>Standard features<br />(kernel)</p>
 <p>VT-x<br />(HVM)</p>
 <p>VT-d</p>
 <p>Remarks</p>
@@ -112,6 +112,11 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​read more</a></p>
 <p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​Erik Edin</a></p>
+<p>Dell Latitude E6430<br /> (Intel HD graphics; Ivy Bridge; i5-3340M, BIOS: A11)</p>
+<p>3.7.4</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
 <p>OK</p>
