--- a/HCL.html
+++ b/HCL.html
@@ -27,7 +27,7 @@
 <p><strong>Qubes R1</strong></p>
 <p><strong>Qubes R2 Beta3</strong></p>
 <p><strong>Reported by</strong></p>
-<p>Standard feautures</p>
+<p>Standard features</p>
 <p>VT-d</p>
 <p>Remarks</p>
 <p>Standard features<br />(kernel)</p>
