--- a/WindowsAppVms.html
+++ b/WindowsAppVms.html
@@ -9,6 +9,7 @@
 <li>Xen PV drivers for Windows that increase performance compared to qemu emulated devices</li>
 </ul>
 <p>Qubes Windows Support Tools are not open source and are distributed under a commercial license and their source code is not publicly available.</p>
+<p>NOTE: Currently only 64-bit versions of Windows 7 are support by Qubes Windows Tools.</p>
 <h2 id="InstallingWindowsOSinaQubesVM">Installing Windows OS in a Qubes VM</h2>
 <p>Please refer to <a href="/wiki/wiki/HvmCreate">this page</a> for instructions on how to install Windows in a Qubes VM.</p>
 <h2 id="InstallingQubessupporttoolsinWindows7VMs">Installing Qubes support tools in Windows 7 VMs</h2>
