--- a/HCL.html
+++ b/HCL.html
@@ -97,6 +97,12 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p><strong>User Reported Desktops and Workstations</strong></p>
+<p>Lenovo ThinkCentre M71e<br /> (HD Graphics 2000; H61; G620; BIOS 9QKT29AUS)</p>
+<p>3.11.1-2, 3.9.2-2, 3.7.4-5</p>
+<p>X</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
 <p></p>
 <p></p>
 <p></p>
