--- a/HCL.html
+++ b/HCL.html
@@ -103,6 +103,11 @@
 <p>X</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
+<p>HP Compaq dc7900 Convertible Minitower<br /> (Q45/Q43; E8400; BIOS 1.16)</p>
+<p>3.9.2-2</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/RYzkSFoMsxQ/ukXhBW4ybqQJ">​Nukama</a></p>
 <p></p>
 <p></p>
 <p></p>
