--- a/HCL.html
+++ b/HCL.html
@@ -25,6 +25,7 @@
 <p>An asterisk (*) indicates that some kind of tweaking is needed.</p>
 <p> </p>
 <p>A blank cell indicates that we lack information about a feature.</p>
+<p><br /></p>
 <h2 id="LatestDevelopmentRelease">Latest Development Release</h2>
 <h1>Qubes R2 Beta3</h1>
 <p>Device</p>
@@ -52,7 +53,7 @@
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
 <p>OK</p>
 <p>OK</p>
-<p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
+<p><a href="/trac/wiki/SonyVaioTinkering">​read more</a></p>
 <p>Qubes core developers</p>
 <p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
 <p>OK</p>
@@ -105,6 +106,7 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/RYzkSFoMsxQ/ukXhBW4ybqQJ">​Nukama</a></p>
+<p><br /></p>
 <h2 id="LatestStableRelease">Latest Stable Release</h2>
 <h1>Qubes R1</h1>
 <p>Device</p>
@@ -215,6 +217,7 @@
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">Qubes Fan</a></p>
+<p><br /></p>
 <h2 id="PreviousReleases">Previous Releases</h2>
 <h1>Qubes R2 Beta2</h1>
 <p>Device</p>
@@ -393,3 +396,87 @@
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">Qubes Fan</a></p>
+<p><br /></p>
+<h1>Qubes R2 Beta1</h1>
+<p>Device</p>
+<p>Standard features</p>
+<p>VT-x<br />(HVM)</p>
+<p>VT-d</p>
+<p>Remarks</p>
+<p>Reported by</p>
+<p><strong>Developer Reported Machines</strong></p>
+<p>Lenovo Thinkpad T420</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>AEM works</p>
+<p>Qubes core developers</p>
+<p>Lenovo Thinkpad T420s</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>AEM works</p>
+<p>Qubes core developers</p>
+<p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>Qubes core developers</p>
+<p>Samsung X460</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>Qubes core developers</p>
+<p>Sony Vaio Z 12 <br /> (2010 edition)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="/trac/wiki/SonyVaioTinkering">​read more</a></p>
+<p>Qubes core developers</p>
+<p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>needs kernel 3.4.17+</p>
+<p>Qubes core developers</p>
+<p><strong>User Reported Machines</strong></p>
+<p>ASUS UX-31</p>
+<p>*</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
+<p>Dell XPS 13<br /> (i5; intel HD; sandy bridge; BIOS A03)</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
+<p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>HP Pavilion Sleekbook 14-B030TU<br /> (i5-3317U; BIOS F.06)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/ZC_SQJhXVOM/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
+<p>Lenovo Thinkpad T430<br /> (i5-3320)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/S_VG_jgtpBo/VngCPK2W5FcJ">​Tunguuz</a></p>
+<p>Lenovo Thinkpad T430s<br /> (i5-3320M; HD4000; QM77; BIOS 2.05)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/Z9seyOT46Ro/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/Z9seyOT46Ro/wX6tsrxE84sJ">​cprise</a></p>
+<p>Lenovo Thinkpad X61t</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/4IrF1A6sa3U/QIQe-dNc4tEJ">​George Walker</a></p>
+<p>Samsung Series 7 Chronos NP700Z5C<br /> (nVidia Optimus; i7-3635QM; BIOS P04ABJ)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​Outback Dingo</a></p>
+<p><br /></p>
