--- a/HCL.html
+++ b/HCL.html
@@ -17,9 +17,9 @@
 <p>Red</p>
 <p>Some primary feature is not working. These are usually machines with poor or nonexistent Linux support in general.</p>
 <p><strong>Marks</strong></p>
-<p>OK</p>
+<p>Yes,OK</p>
 <p>The feature is working correctly.</p>
-<p>X</p>
+<p>No,X</p>
 <p>The feature does not work or is not present.</p>
 <p>*</p>
 <p>An asterisk (*) indicates that some kind of tweaking is needed.</p>
@@ -29,83 +29,104 @@
 <h2 id="LatestDevelopmentRelease">Latest Development Release</h2>
 <h1>Qubes R2 Beta3</h1>
 <p>Device</p>
-<p>Standard features<br />(kernel)</p>
+<p>Usable</p>
+<p>Kernel<br />3.11</p>
+<p>Kernel<br />3.9</p>
+<p>Kernel<br />3.7</p>
 <p>VT-x<br />(HVM)</p>
 <p>VT-d</p>
 <p>Remarks</p>
 <p>Reported by</p>
-<p><strong>Developer Reported Machines</strong></p>
-<p>Lenovo Thinkpad T420s<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<p><strong>Laptop Devices</strong></p>
+<p>Lenovo Thinkpad T420s<br /> (i5-2520M; Sandy Bridge; Intel HD graphics)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
 <p>Qubes core developers</p>
 <p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
-<p>OK</p>
-<p>OK</p>
-<p>X</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
 <p>Qubes core developers</p>
-<p>Samsung X460</p>
-<p>OK</p>
-<p>OK</p>
-<p>X</p>
-<p>Qubes core developers</p>
+<p>Samsung X460<br /> (P8600; PM45; GeForce 9200M GS; BIOS 06LY.M038.20091110.JIP)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
-<p>OK</p>
-<p>OK</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
 <p><a href="/trac/wiki/SonyVaioTinkering">​read more</a></p>
 <p>Qubes core developers</p>
-<p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>Qubes core developers</p>
-<p><strong>User Reported Laptops</strong></p>
-<p>Apple MacBookPro<br /> (i7 M620)</p>
-<p>X</p>
-<p>OK</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
+<p>Dell Latitude E6420<br /> (i5-2520M; Sandy Bridge; Intel HD graphics; BIOS A17)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
+<p>Apple MacBookPro<br /> (i7 M620; GeForce GT 330M)</p>
+<p>Yes</p>
+<p>No</p>
+<p>No Network, Chipset doesn't support VT-d! <a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
-<p>Apple MacBookPro<br /> (Intel HD Graphics, Ivy Bridge, i5-3210M)</p>
-<p>X</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/ZbjrseLxuPQ/discussion">​read more</a></p>
+<p>Apple MacBookPro<br /> (i5-3210M; Ivy Bridge; HD Graphics 4000)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No CPU VT-d support!? <a href="https://groups.google.com/d/topic/qubes-users/ZbjrseLxuPQ/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/ZbjrseLxuPQ/5Jx5DvpnwMMJ">​ph145h</a></p>
 <p>ASUS X55A</p>
-<p>X</p>
-<p>X</p>
-<p>X</p>
+<p>No</p>
+<p>No</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/2csjvHia9Rw/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/2csjvHia9Rw/NRsqR0g6wIMJ">​Zrubi</a></p>
-<p>Dell Latitude E4300 <br /> (Intel GMA 4500M; Mobile 4 Series Chipset; Core2 Duo P9600)</p>
-<p>X</p>
-<p>OK</p>
-<p>OK</p>
+<p>Dell Latitude E4300 <br /> (P9600; GM45; GMA 4500MHD)</p>
+<p>Yes</p>
+<p>Yes</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LNJqSbH0cOQ/VC9EwEDrXMQJ">​Pablo Costa</a></p>
-<p>Dell Latitude E6430<br /> (Intel HD graphics; Ivy Bridge; i5-3340M, BIOS: A11)</p>
-<p>3.7.4</p>
-<p>OK</p>
-<p>OK</p>
+<p>Dell Latitude E6430<br /> (i5-3340M; Ivy Bridge; Intel HD graphics; BIOS A11)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
-<p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
-<p>3.7.4</p>
-<p>OK</p>
-<p>OK</p>
+<p>Fujitsu S751<br /> (i5-2520M; QM67; HD3000; BIOS 1.18)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
-<p><strong>User Reported Desktops and Workstations</strong></p>
-<p>Lenovo ThinkCentre M71e<br /> (HD Graphics 2000; H61; G620; BIOS 9QKT29AUS)</p>
-<p>3.11.1-2, 3.9.2-2, 3.7.4-5</p>
-<p>OK</p>
-<p>X</p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
-<p>HP Compaq dc7900 Convertible Minitower<br /> (Q45/Q43; E8400; BIOS 1.16)</p>
-<p>3.9.2-2</p>
-<p>OK</p>
-<p>OK</p>
+<p><strong>Desktop, Workstation and Server</strong></p>
+<p>HP Compaq dc7900 Convertible Minitower<br /> (E8400; Q45/Q43; BIOS 1.16)</p>
+<p>*</p>
+<p>No</p>
+<p>Yes</p>
+<p>No</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Problem with graphics on 3.11,3.7, only 2GB RAM.</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/RYzkSFoMsxQ/ukXhBW4ybqQJ">​Nukama</a></p>
+<p>HP ProLiant DL360 G5<br /> (E5440; 5000P; ATI ES1000; BIOS P58)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p>Yes</p>
+<p>No</p>
+<p>Some video glitches, no audio hardware.</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/1CyVEStoVCI/RTRw8-aalsUJ">​Nukama</a></p>
+<p>Lenovo ThinkCentre M71e<br /> (G620; H61; HD Graphics 2000; BIOS 9QKT29AUS)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
 <p><br /></p>
 <h2 id="LatestStableRelease">Latest Stable Release</h2>
 <h1>Qubes R1</h1>
