--- a/HCL.html
+++ b/HCL.html
@@ -54,6 +54,8 @@
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
 <p>No</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/S-leNH8AYsU/WL_XdNAhBkQJ">marmarek (Qubes core developer)</a></p>
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
@@ -63,6 +65,8 @@
 <p><a href="/trac/wiki/SonyVaioTinkering">​read more</a></p>
 <p>Qubes core developers</p>
 <p>Dell Latitude E6420<br /> (i5-2520M; Sandy Bridge; Intel HD graphics; BIOS A17)</p>
+<p>Yes</p>
+<p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
