--- a/HCL.html
+++ b/HCL.html
@@ -118,7 +118,7 @@
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
-<p>No</p>
+<p>Yes</p>
 <p>Yes</p>
 <p>No</p>
 <p>Some video glitches, no audio hardware.</p>
