--- a/HCL.html
+++ b/HCL.html
@@ -131,6 +131,26 @@
 <p>Yes</p>
 <p>No</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
+<p><strong>Motherboards</strong></p>
+<p>BioStar A880GZ<br /> (AM3+; 880G/SB850)</p>
+<p>*</p>
+<p>*</p>
+<p>Yes</p>
+<p>Yes</p>
+<p><a href="/trac/ticket/762">#762</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​clewis</a></p>
+<p>Biostar TA790GX A3+<br /> (AM3; 790GX/SB750; BIOS 78DAA420)</p>
+<p>*</p>
+<p>*</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>No</p>
+<p><a href="/trac/ticket/762">#762</a></p>
+<p>Gigabyte GA-X79S-UP5 Wi-Fi<br /> (2011; C606; BIOS 1.0)</p>
+<p>Yes</p>
+<p>Yes</p>
+<p>VT-d option in BIOS according to <a href="http://download.gigabyte.eu/FileList/Manual/mb-manual_ga-x79s-up5_e.pdf">manual</a></p>
 <p><br /></p>
 <h2 id="LatestStableRelease">Latest Stable Release</h2>
 <h1>Qubes R1</h1>
