--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -7,6 +7,7 @@
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta3-x86_64-DVD.iso/download">​Qubes-R2-Beta3-x86_64-DVD.iso</a> (via sourceforge.net)</li>
+<li><a href="http://burnbit.com/torrent/266365/Qubes_R2_Beta3_x86_64_DVD_iso">​Qubes-R2-Beta3-x86_64-DVD.iso</a> (torrent)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta3-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
