--- a/HCL.html
+++ b/HCL.html
@@ -29,7 +29,7 @@
 <h2 id="LatestDevelopmentRelease">Latest Development Release</h2>
 <h1>Qubes R2 Beta3</h1>
 <p>Device</p>
-<p>Usable</p>
+<p>Runs out of the box</p>
 <p>Kernel<br />3.11</p>
 <p>Kernel<br />3.9</p>
 <p>Kernel<br />3.7</p>
@@ -93,13 +93,13 @@
 <p><a href="https://groups.google.com/d/topic/qubes-devel/LNJqSbH0cOQ/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LNJqSbH0cOQ/VC9EwEDrXMQJ">​Pablo Costa</a></p>
 <p>Dell Latitude E6430<br /> (i5-3340M; Ivy Bridge; Intel HD graphics; BIOS A11)</p>
-<p>Yes</p>
+<p>*</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/pAVGe04ZC48/AJwY6yd7LeIJ">​Zrubi</a></p>
 <p>Fujitsu S751<br /> (i5-2520M; QM67; HD3000; BIOS 1.18)</p>
-<p>Yes</p>
+<p>*</p>
 <p>Yes</p>
 <p>Yes</p>
 <p>Yes</p>
@@ -132,7 +132,7 @@
 <p>No</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/YcqMDcVYQh8/pk0B_9RfGQMJ">​Nukama</a></p>
 <p><strong>Motherboards</strong></p>
-<p>BioStar A880GZ<br /> (AM3+; 880G/SB850)</p>
+<p>Biostar A880GZ<br /> (AM3+; 880G/SB850)</p>
 <p>*</p>
 <p>*</p>
 <p>Yes</p>
