--- a/QubesLists.html
+++ b/QubesLists.html
@@ -24,6 +24,7 @@
 <li><a href="/wiki/wiki/HCL#GeneratingandSubmittingNewReports">HCL reports</a>.</li>
 <li>Installation problems.</li>
 <li>Hardware compatibility problems.</li>
+<li>Bug reports.</li>
 <li>How do I...?</li>
 </ul>
 <h3 id="ReadTheseFirst">Read These First</h3>
